# RobotLocalization_autumn

./: .gitignore  CMakeLists.txt  README.md  package.xml
gt_extractor/: CMakeLists.txt  package.xml
gt_extractor/include/gt_extractor/: helper_functions.h
gt_extractor/src/: gt_extractor.cpp
include/robot_localization_pf_landmarks/: helper_functions.h  particle_filter.h
launch/: robot_localization.launch
robot_localization_data/: CMakeLists.txt  package.xml
robot_localization_data/data/: camera_setting.yaml  extract_keypoint_data.yaml  kin_dyn_2.yaml  kin_dyn_3.yaml  map_data.txt  particle_setting.yaml  zed_data.yaml
robot_localization_data/logs/: merge.py
robot_localization_data/map/: make_blank_img.py  make_soccerfield_1040_740.py  make_soccerfield_img.py  sense_test.py
robot_localization_data/scenarios/scenario1/: center_foot.txt  pf.txt
robot_localization_data/scenarios/scenario2/: gt.txt
robot_localization_data/scenarios/scenario3/: gt.txt
robot_localization_data/scenarios/scenario4/: gt.txt
robot_localization_head_receive/: CMakeLists.txt  package.xml
robot_localization_head_receive/src/: robot_localization_head_receive2.cpp  robot_localization_head_receive3.cpp  robot_localization_head_receive3_test.cpp
robot_localization_msgs/: CMakeLists.txt  package.xml
robot_localization_msgs/msg/: ExtractKeyPointData.msg  FootStepCommand.msg  HeadTransform.msg  Obstacle.msg  Obstacles.msg  Poses.msg  RePosition.msg  RobotMove.msg  Setting.msg  ZedData.msg
robot_localization_pf_landmarks/: README.md
robot_localization_pf_landmarks/include/robot_localization_pf_landmarks/: helper_functions.h  map.h  particle_filter.h
robot_localization_pf_landmarks/launch/: robot_localization.launch  robot_localization_kinematic.launch  robot_localization_wo_setposition.launch
robot_localization_pf_landmarks/src/: particle_filter.cpp  robot_localization_pf_landmarks.cpp
robot_localization_setposition/: CMakeLists.txt  package.xml
robot_localization_setposition/src/: robot_localization_setposition.py  robot_localization_setposition_keeper.py  robot_localization_setposition_player.py
robot_localization_streaming/: CMakeLists.txt  package.xml
robot_localization_streaming/src/: robot_localization_streaming.cpp
src/: particle_filter.cpp  robot_localization_pf_landmarks.cpp
