<?xml version="1.0"?>
<package format="2">
  <name>robot_localization_pf_landmarks</name>
  <version>0.0.0</version>
  <description>The robot_localization_pf_landmarks package</description>

  <maintainer email="junyoung@todo.todo">junyoung</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>alice_msgs</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>yaml-cpp</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>alice_msgs</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>alice_msgs</exec_depend>

</package>
