<?xml version="1.0"?>
<package format="1">
  <name>robot_localization_data</name>
  <version>0.0.0</version>
  <description>The robot_localization_data package</description>

  <maintainer email="dongha@todo.todo">dongha</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
	
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

</package>
