<?xml version="1.0"?>
<package format="1">
  <name>robot_localization_head_receive</name>
  <version>0.0.0</version>
  <description>The robot_localization_head_receive package</description>

  <maintainer email="dongha@todo.todo">dongha</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>robot_localization_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>yaml-cpp</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>robot_localization_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>yaml-cpp</run_depend>

</package>
