<?xml version="1.0"?>
<package format="1">
  <name>robot_localization_msgs</name>
  <version>0.0.0</version>
  <description>The robot_localization_msgs package</description>

  <maintainer email="dongha@todo.todo">dongha</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>roscpp</build_depend>
	<build_depend>message_generation</build_depend>
    <build_depend>std_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>

	<run_depend>roscpp</run_depend>
	<run_depend>message_runtime</run_depend>
    <run_depend>std_msgs</run_depend>
	<run_depend>sensor_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>

</package>
