<?xml version="1.0"?>
<package format="1">
<name>robot_localization_setposition</name>
  <version>0.0.0</version>
  <description>The robot_localization_setposition package</description>

  <maintainer email="dongha@todo.todo">dongha</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>alice_ft_sensor_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>alice_ft_sensor_msgs</run_depend>

</package>
